Fix for positions on small phones (iPhone)

--- a/style/less/style.less
+++ b/style/less/style.less
@@ -379,6 +379,9 @@ header {
 					align-self: center;
 					.center();
 				}
+				@media @smallmobile {
+					height: 200px;
+				}
 				@media @tablet {
 					height: 29vw;
 				}
@@ -392,7 +395,6 @@ header {
 				width: 100%;
 				flex-basis: auto; /* default value */
 				@media @smallmobile {
-					min-width: 275px;
 				}
 				@media @tablet {
 					min-width: auto;
